force-app/main/default/objects/ucinn_ascendv2__Payment_Group__c/ucinn_ascendv2__Payment_Group__c.object-meta.xml
<CustomObject>
    <label>Payment Group</label>
    <nameField>
        <displayFormat>Payment Group-{0000}</displayFormat>
        <label>Payment Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>