force-app/main/default/objects/ucinn_ascendv2__Payment_Group__c/fields/ucinn_ascendv2__Check_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Check_Number__c</fullName>
    <label>Check Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>