force-app/main/default/objects/ucinn_ascendv2__Payment_Group__c/fields/ucinn_ascendv2__Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Date__c</fullName>
    <label>Credit Date</label>
    <type>Date</type>
</CustomField>