force-app/main/default/objects/ucinn_ascendv2__Payment_Group__c/fields/ucinn_ascendv2__Tender_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tender_Type__c</fullName>
    <label>Tender Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>